correct cookie saving code for lightbox, and also use it for sorting (currently pretty hardcoded to only support 'date' or 'name'); anchor link highlight should be diff colro than the nav/info bar, and don't scroll it to the top, that's annoying; some minor code cleanup for readability

--- a/themes/fuckflickr/css/stylesheet.css
+++ b/themes/fuckflickr/css/stylesheet.css
@@ -145,7 +145,7 @@ p, h1, h2, h3, h4, h5 {
 }
 
 #images .selected {
-  background: #FFFFAA;
+  background: #fcf;
 }
 
 .thumb-wrapper {
@@ -199,8 +199,8 @@ p, h1, h2, h3, h4, h5 {
   font-size: 9px; /* non-gecko rendering engines actually go down to 1px; don't use that */ 
 }
 
-.description {padding: 8px 0 0 0;}
-.meta {padding: 8px 0 30px 0;}
+.description { padding: 8px 0 0 0;}
+.meta { padding: 0; margin-bottom: 30px; }
 
 .hi-res { margin-left: 5px; } /* give the man some elbow room geeze */
 .embed { margin-left: 8px; }
